[metadata]
name = chaoswm
url = https://chaostoolkit.org
project_urls =
    Docs: RTD = https://chaostoolkit.org/drivers/wiremock/
    GitHub: issues = https://github.com/chaostoolkit-incubator/chaostoolkit-wiremock/issues
    GitHub: repo = https://github.com/chaostoolkit-incubator/chaostoolkit-wiremock
description = Wiremock extension for the Chaos Toolkit
long_description = file: README.md
long_description_content_type = text/markdown
author = Marco Masetti
author_email = marco.masetti@sky.uk
zip_safe = False
platforms = any
license = Apache License Version 2.0
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: Freely Distributable
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: Implementation
    Programming Language :: Python :: Implementation :: CPython

[options]
use_scm_version = True
python_requires = >=3.7
packages = find:
include_package_data = True
setup_requires =
    setuptools_scm>=1.15.0
    setuptools_scm_git_archive>=1.0
install_requires =
    chaostoolkit-lib~=1.5
    requests

[flake8]
max-line-length=80

[tool:isort]
line_length=80
known_first_party = chaoswm

[tool:pytest]
testpaths = tests

python_files =
    test_*.py
    *_test.py
    tests.py
addopts =
    -v
    -rxs
    --cov chaoswm
    --cov-report term-missing:skip-covered
    --cov-report xml
    -p no:warnings